2007-08-07 Erik Petrich <epetrich AT ivorytower.norman.ok.us>

	* lib/variables.mk: changed ~/.sdcc_builder/local to
	  $(HOME)/.sdcc_builder/local since not all shells have
	  a special meaning for ~

2007-06-28 Borut Razem <borut.razem AT siol.net>

	* local/mirror-doors.mk: slightly changed TARGETLDFLAGS

2007-06-27 Borut Razem <borut.razem AT siol.net>

	* local/mirror-doors.mk: create Mac OS X universal binaries

2007-06-03 Borut Razem <borut.razem AT siol.net>

	* lib/variables.mk, lib/local.mk: added posibility to have the local
	  machine makefiles in a user defined directory, ~/.sdcc_builder/local
	  by default; defined in LOCAL_MK variable

2007-04-14 Borut Razem <borut.razem AT siol.net>

	* lib/upload.mk: unquote the ssh command

2007-04-12 Borut Razem <borut.razem AT siol.net>

	* lib/upload.mk: explicitly execute chmod g+wx on destination directories

2007-04-12 Borut Razem <borut.razem AT siol.net>

	* lib/upload.mk: explicitly execute chmod g+w on destination files

2007-03-31 Borut Razem <borut.razem AT siol.net>

	* sdcc-build-bootstrap.sh: take "make" arguments from the command line

2007-03-25 Borut Razem <borut.razem AT siol.net>

	* lib/send-mail.mk, lib/bootstrap.sh, Makefile:
	  mail handling reorganization
	* lib/upload.mk: retain file permissions
	* lib/variables: added global mail server definition

2007-03-24 Borut Razem <borut.razem AT siol.net>

	* lib/upload.mk, lib/variables.mk, sdcc-build-bootstrap.sh:
	  sdcc-builder preparation for Disrtibured Compile Farm

2007-03-20 Borut Razem <borut.razem AT siol.net>

	* local/cf-x86.mk: disabled pic16 regression test

2007-03-18 Borut Razem <borut.razem AT siol.net>

	* added fuction ls_l_full_time() which executes supported version of
	  ls -l --full-time
	* local/mirror-dors.mk: more specific comments about readline
	* sdcc-build-bootstrap.sh: fixed typo - $BULDROOT changed to $BUILDROOT

2007-03-17 Borut Razem <borut.razem AT siol.net>

	* local/mirror-doors.mk: added